--- a/index.html
+++ b/index.html
@@ -1,14 +1,26 @@
 <!DOCTYPE html>
 <html>    
     <head>
-        <title>Page Title</title>
-        <meta charset="utf-8"/>    
+        <title>My personal information </title>
+        <link rel="stylesheet" href="style.css">
     </head>    
-    <body>
-                
-        <h1>This is a Heading</h1>        
-        <h1 color="red">This is a Heading</h1>  
-        <img src="LogoBuuThai.jpg" >
-        <p>This is a paragraph.</p>    
+    <body>    
+        <header class="top-header">
+            <a class="menu" href="#">My personal information</a>
+        </header>
+        <div class="main">
+            <div class="box">
+                <img class="image" src="photo.jpg">
+                <h2>Name : Dechathon prajit</h2>
+                <h2>Nickname : Earth</h2>
+                <h2>Student id : 64160295</h2>  
+                <h2>Date of birth : 24 December 2002</h2>
+                <h2>Email : 64160295</h2>
+            </div>
+        </div>
+        <footer class="bottom">
+           <p>About this website</p> 
+           <p>64160295 Dechathon prajit</p>
+        </footer>
     </body>
 </html>
