--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <body>    
         <header class="top-header">
             <a class="menu" href="#">My personal information</a>
+            
         </header>
         <div class="main">
             <div class="box">
@@ -15,7 +16,7 @@
                 <h2>Nickname : Earth</h2>
                 <h2>Student id : 64160295</h2>  
                 <h2>Date of birth : 24 December 2002</h2>
-                <h2>Email : 64160295</h2>
+                <h2>Email : 64160295@go.buu.ac.th</h2>
             </div>
         </div>
         <footer class="bottom">
